--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@
                 <table>
                     <tr>
                         <th><i class="fas fa-dumbbell fa-fw cmuscle"></i>筋トレ</th>
-                        <th>毎日やってます．<br>鍛えることが好きです．</th>
+                        <th>毎日やってます</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-laptop fa-fw ctech"></i>技術</th>
-                        <th>ハードからソフトまで幅広く興味があります．</th>
+                        <th>ハードからソフトまで興味があります</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-magic fa-fw cmagic"></i>手品</th>
-                        <th>カードとコインです．</th>
+                        <th>カードとコイン</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-chess-knight fa-fw cgame"></i>将棋，囲碁，麻雀, チェス</th>
-                        <th>物心付いた頃からやってます．<br>最近はチェスをしてます．</th>
+                        <th>物心付いた頃からやってます</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-cookie fa-fw ccook"></i>料理</th>
-                        <th>お菓子が一番得意ですが，<br>最近は家庭料理に移行してます．</th>
+                        <th>お菓子が一番得意です</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-motorcycle fa-fw cbike"></i>バイク旅</th>
-                        <th>原付でどこへでも出掛けます．</th>
+                        <th>原付で出掛けます</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-tv fa-fw canime"></i>アニメ</th>
-                        <th>宝島，攻殻機動隊，ジョジョが大好きです．</th>
+                        <th>宝島、攻殻機動隊、ジョジョ</th>
                     </tr>
                 </table>
             </div>
