--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
             </div>
         </div>
 
-        <img src="./images/jigglypuffs.png">
+        <!--<img src="./images/jigglypuffs.png">-->
+
+        <p></p>
+        <div class="top">
+            welcome to ei0124 portfolio!
+        </div>
 
         <div class="main">
             <div class="cabout">
