--- a/index.html
+++ b/index.html
@@ -134,47 +134,45 @@
                     <div class="container left">
                         <div class="content">
                             <h2>2015</h2>
-                            <p>ROBOCON</p>
-                            <p>夏ロボ</p>
+                            <p><a href="https://www.nhk.or.jp/robocon/rbcn2015/d_index.html" target="_blank">ROBOCON</a></p>
+                            <p><a href="https://sites.google.com/site/summerrobocon/history" target="_blank">夏ロボ</a></p>
                         </div>
                     </div>
                     <div class="container right">
                         <div class="content">
                             <h2>2016</h2>
-                            <p>ROBOCON</p>
-                            <p>夏ロボ</p>
+                            <p><a href="https://www.nhk.or.jp/robocon/rbcn2016/d_index.html" target="_blank">ROBOCON</a></p>
+                            <p><a href="https://sites.google.com/site/summerrobocon/history" target="_blank">夏ロボ</a></p>
                         </div>
                     </div>
                     <div class="container left">
                         <div class="content">
                             <h2>2017</h2>
-                            <p>ROBOCON</p>
-                            <p>夏ロボ</p>
+                            <p><a href="https://www.nhk.or.jp/robocon/2017/gakusei/index.html" target="_blank">ROBOCON</a></p>
+                            <p><a href="https://sites.google.com/site/summerrobocon/history" target="_blank">夏ロボ</a></p>
                         </div>
                     </div>
                     <div class="container right">
                         <div class="content">
                             <h2>2018</h2>
-                            <p>SECCAMP全国</p>
-                            <p>JPHACKS福岡</p>
+                            <p><a href="https://www.ipa.go.jp/jinzai/camp/2018/zenkoku2018_index.html" target="_blank">SECCAMP全国</a></p>
+                            <p><a href="https://jphacks.com/2018/" target="_blank">JPHACKS福岡</a></p>
                         </div>
                     </div>
                     <div class="container left">
                         <div class="content">
                             <h2>2019</h2>
-                            <p>SECCAMP全国</p>
-                            <p>SECCAMP福岡</p>
-                            <p>SECCAMP長崎</p>
-                            <p>CODEBLUE</p>
+                            <p><a href="https://www.ipa.go.jp/jinzai/camp/2019/zenkoku2019_index.html" target="_blank">SECCAMP全国</a></p>
+                            <p><a href="https://www.security-camp.or.jp/minicamp/fukuoka2019a.html" target="_blank">SECCAMP福岡</a></p>
+                            <p><a href="https://www.security-camp.or.jp/minicamp/nagasaki2019.html" target="_blank">SECCAMP長崎</a></p>
+                            <p><a href="https://codeblue.jp/2019/" target="_blank">CODEBLUE</a></p>
                         </div>
                     </div>
                 </div>
-                <table></table>
             </div>
 
             <div class="cworks">
                 <a id="works">
-
                     <h1 class="section-style">Works</h1>
                 </a>
                 <table>
