fixed interests comment

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     </tr>
                     <tr>
                         <th><i class="fas fa-magic fa-fw cmagic"></i>手品</th>
-                        <th>カードとコイン</th>
+                        <th>カード、コインが好きです</th>
                     </tr>
                     <tr>
                         <th><i class="fas fa-chess-knight fa-fw cgame"></i>将棋，囲碁，麻雀, チェス</th>
@@ -264,7 +264,7 @@
                     </tr>
                     <tr>
                         <th><i class="fas fa-tv fa-fw canime"></i>アニメ</th>
-                        <th>宝島、攻殻機動隊、ジョジョ</th>
+                        <th>宝島、攻殻機動隊、ジョジョが好きです</th>
                     </tr>
                 </table>
             </div>
