--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 <body>
     <div id="app">
-        <div class="header">
+        <header>
             <div class="header-logo">ei0124 Portfolio</div>
             <div class="header-list">
                 <transition-group appear tag="div" @before-enter="beforeEnter">
                     <li v-for="(item, index) in contentslist" :data-index="index" :key="item"><a v-bind:href="item.url">{{item.text}}</a></li>
                 </transition-group>
             </div>
-        </div>
+        </header>
 
         <!--<img src="./images/jigglypuffs.png">-->
 
@@ -40,7 +40,7 @@
             welcome to ei0124 portfolio!
         </div>
 
-        <div class="main">
+        <main>
             <div class="cabout">
                 <a name="about">
                     <h1 class="section-style">About</h1>
@@ -269,16 +269,16 @@
                     </tr>
                 </table>
             </div>
-        </div>
+        </main>
 
-        <div class="footer">
+        <footer>
             <div class="footer-logo">Links</div>
             <div class="footer-list">
                 <transition-group appear tag="ul" @before-enter="beforeEnter">
                     <li v-for="(item, index) in linklist" :data-index="index" :key="item"><a v-bind:href="item.url" target="_blank"><img v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
                 </transition-group>
             </div>
-        </div>
+        </footer>
     </div>
     <!--<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
