--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </a>
 
             <ul class="footer-ul">
-                <li v-for="(item, index) in languages" :data-index="index" :key="item"><a v-bind:href="item.url" target="_blank"><img class="footer-img" v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
+                <li v-for="(item, index) in linklist" :data-index="index" :key="item"><a v-bind:href="item.url" target="_blank"><img class="footer-img" v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
             </ul>
 	    
             <div class="center">
