--- a/index.html
+++ b/index.html
@@ -215,12 +215,17 @@
                 <h1 class="section-style">Links</h1>
             </a>
 
+            <!--Twitter TimeLine-->
+            <div>
+                <a class="twitter-timeline" data-width="320" data-height="480" href="https://twitter.com/ei01241?ref_src=twsrc%5Etfw">Tweets by ei01241</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+
             <ul class="footer-ul">
                 <li v-for="(item, index) in linklist" :data-index="index" :key="item"><a v-bind:href="item.url" target="_blank"><img class="footer-img" v-bind:src="item.src" v-bind:alt="item.url" border="0"></a></li>
             </ul>
 	    
             <div class="center">
-                <small>Last Update:2020/04/11 ©ei0124</small>
+                <small>Last Update:2020/06/11 ©ei0124</small>
             </div>
         </footer>
     </div>
